--- a/index.html
+++ b/index.html
@@ -30,19 +30,28 @@
         </section>
         <main id="contenido">
             <div class="card">
-                <img src="assets/img/auto.webp" alt="" style="width: 300px; height: 250px ;">
+                <img src="assets/img/auto.webp" alt="" style="">
                 <p>Model: Crossover</p>
                 <button>Ver Más</button>
             </div>
-            <ul>
-               <li><<</li>
-               <li>1</li>
-               <li>2</li>
-               <li>3</li>
-               <li>>></li>
-            </ul>
+            <div class="paginar">
+                <ul >
+                    <li><a href=""><<</a></li>
+                    <li><a href="">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">>></a></li>
+                 </ul>
+            </div>
+            
         </main>
         <footer id="footer">
+            <div class="redes">
+                <i class="ri-linkedin-box-fill"></i>
+                <i class="ri-instagram-line"></i>
+                <i class="ri-facebook-box-fill"></i>
+                <i class="ri-github-line"></i>
+            </div>
             <p>Todos los derechos reservados &copy; 2024</p>
         </footer>
 </body>
