--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 </head>
 <body class="container-grid">
    
-        <nav id="navbar">
+        <nav id="contenedor-navbar">
             <div class="marca">
                 <i class="fa-solid fa-car"></i>
                 <h3>Electric Cars</h3>
             </div>
             <i class="fa-solid fa-bars"></i>
+            <ul class="list">
+                <li>Inicio</li>
+                <li>Catálogo</li>
+                <li>Ofertas</li>
+                <li>Contacto</li>
+            </ul>
         </nav>
         <section id="filtro">
             <p>Ordenar Por:</p>
@@ -29,18 +35,71 @@
             </select>
         </section>
         <main id="contenido">
-            <div class="card">
-                <img src="assets/img/auto.webp" alt="" style="">
-                <p>Model: Crossover</p>
-                <button>Ver Más</button>
-            </div>
+            <section class="galeria">
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="">
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/auto.webp" alt="" >
+                    <p>Model: Crossover</p>
+                    <button>Ver Más</button>
+                </div>
+            </section>
+            
             <div class="paginar">
                 <ul >
-                    <li><a href=""><<</a></li>
+                    <li><a href=""><i class="ri-arrow-left-double-line"></i></a></li>
                     <li><a href="">1</a></li>
                     <li><a href="">2</a></li>
                     <li><a href="">3</a></li>
-                    <li><a href="">>></a></li>
+                    <li><a href=""><i class="ri-arrow-right-double-fill"></i></a></li>
                  </ul>
             </div>
             
