Agregando imagenes y arreglando cards

--- a/index.html
+++ b/index.html
@@ -38,58 +38,80 @@
             <section class="galeria">
                 <div class="card">
                     <img src="assets/img/auto.webp" alt="">
-                    <p>Model: Crossover</p>
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/2.webp" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/3.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/4.avif" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/5.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/6.webp" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/7.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/8.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/9.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/10.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/auto.webp" alt="" >
-                    <p>Model: Crossover</p>
+                    <img src="assets/img/11.jpeg" alt="" >
+                    <div class="card-body">
+                        <p>Model: Crossover</p>
                     <button>Ver Más</button>
+                    </div>
                 </div>
             </section>
             
